Noise when changing Diffuse node to Emission node #48963

Closed
opened 2016-07-28 08:14:46 +02:00 by Cédric · 6 comments
Member

System Information
Win 7
I7-5820K
GTX780 ti (368.69)

Blender Version
Broken: 2.77.1 a27acef and official 2.77a
Worked: (optional)

Short description of error
In the renderer view, i'm using a mesh to light the scene and there is a lot of noise when changing a Diffuse node with a Emission node. I have to change a parameter (like the strength) to update the scene correctly.

Exact steps for others to reproduce the error
Open the attached file: DiffuseNoise.blend.
Set the 3d view to Renderer.
In the node view, change the Emission node to Diffuse node.
Change again the Diffuse node by the Emission node.
See the noise in the renderer view.
Change the strength of the emission node to update correctly the scene.

**System Information** Win 7 I7-5820K GTX780 ti (368.69) **Blender Version** Broken: 2.77.1 a27acef and official 2.77a Worked: (optional) **Short description of error** In the renderer view, i'm using a mesh to light the scene and there is a lot of noise when changing a Diffuse node with a Emission node. I have to change a parameter (like the strength) to update the scene correctly. **Exact steps for others to reproduce the error** Open the attached file: DiffuseNoise.blend. Set the 3d view to Renderer. In the node view, change the Emission node to Diffuse node. Change again the Diffuse node by the Emission node. See the noise in the renderer view. Change the strength of the emission node to update correctly the scene.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Clarkx

Added subscriber: @Clarkx
Author
Member
[DiffuseNoise.blend](https://archive.blender.org/developer/F328915/DiffuseNoise.blend)

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Seems like its not being added back into the MIS pool, toggling the MIS setting off and on will fix the noise.

Seems like its not being added back into the MIS pool, toggling the MIS setting off and on will fix the noise.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2016-07-28 12:55:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48963
No description provided.